--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 240830/cnn_for_stanford_dogs.h5
+/240830/.idea/aws.xml
+/.idea/aws.xml
+/.idea/compiler.xml
+/240830/.idea/compiler.xml
+/240830/.idea/240830.iml
+/.idea/git_toolbox_prj.xml
+/.idea/jpa-buddy.xml
+/240830/.idea/jpa-buddy.xml
+/.idea/misc.xml
+/240830/.idea/misc.xml
+/.idea/modules.xml
+/240830/.idea/modules.xml
+/.idea/pythonExam_ubuntu.iml
+/.idea/vcs.xml
+/240830/.idea/vcs.xml
