--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /.idea/pythonExam_ubuntu.iml
 /.idea/vcs.xml
 /240830/.idea/vcs.xml
+202409/240909_LSTM/aclImdb/
 202409/240909_LSTM/aclImdb/imdb.vocab
 202409/240909_LSTM/aclImdb/imdbEr.txt
 202409/240909_LSTM/aclImdb/README
@@ -22,3 +23,5 @@
 202409/240909_LSTM/aclImdb/test/neg/1_3.txt
 202409/240909_LSTM/aclImdb/test/neg/2_3.txt
 202409/240909_LSTM/aclImdb/test/neg/3_4.txt
+202409/240909_LSTM/aclImdb/test/neg/4_4.txt
+202409/240909_LSTM/aclImdb/
