--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@
 202409/240909_LSTM/aclImdb/test/neg/3_4.txt
 202409/240909_LSTM/aclImdb/test/neg/4_4.txt
 202409/240909_LSTM/aclImdb/
+202409/240909_LSTM/aclImdb_v1.tar.gz
+202409/240909_LSTM/movie_data.csv
+202409/240909_LSTM/movie_data.csv.gz
+202409/240909_LSTM/aclImdb_v1.tar/aclImdb_v1.tar
