--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,21 @@
 202409/240909_LSTM/movie_data.csv
 202409/240909_LSTM/movie_data.csv.gz
 202409/240909_LSTM/aclImdb_v1.tar/aclImdb_v1.tar
+240923/logs/train/events.out.tfevents.1727071703.DESKTOP-PGV55HT.10356.0.v2
+240923/logs/validation/events.out.tfevents.1727071786.DESKTOP-PGV55HT.10356.1.v2
+240923/models/decoder/fingerprint.pb
+240923/models/decoder/keras_metadata.pb
+240923/models/decoder/saved_model.pb
+240923/models/decoder/variables/variables.data-00000-of-00001
+240923/models/vae/variables/variables.index
+240923/models/vae/variables/variables.data-00000-of-00001
+240923/models/vae/saved_model.pb
+240923/models/vae/keras_metadata.pb
+240923/models/vae/fingerprint.pb
+240923/models/encoder/variables/variables.index
+240923/models/encoder/variables/variables.data-00000-of-00001
+240923/models/encoder/saved_model.pb
+240923/models/encoder/keras_metadata.pb
+240923/models/encoder/fingerprint.pb
+240923/models/decoder/variables/variables.index
+240923/notebooks/__pycache__/utils.cpython-37.pyc
